[package]
name = "native-webview"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "native-webview"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
wry = "0.12.2"
serde = "1.0.132"
serde_json = "1.0.73"
crossbeam-channel = "0.5.1"
image = "0.23.14"